# Archon-System-v1.0

./: .gitignore  Dockerfile  Dockerfile.test  README.md  docker-compose.yml  requirements.txt
.github/workflows/: main.yml
ALL FILES UNSORTED/: # On your Raspberry Pi....  Cargo.toml  Dockerfile  Dockerfile.vpn  LocalDeviceAgent.py  MANIFEST.sh  SQL Commands to run  SQL Schema for archeon system  ai_and_research_crew.py  api_gateway.py  archeon_ceo.py  archon-hid.service  archon_daemon.py  auth.py  business_crew.py  codng_crew.py  creative_crew.py  crew_control.py  crew_control_gui.py  crew_control_vision.py  db_manager.py  dfir_crew.py  docker-compose.yml  enable_2fa.py  fapc-tools_v23.py  fapc_tools-v14.py  fapc_tools-v20.py  fapc_tools.py  fapc_tools_(Master_Library).py  fapc_tools_v10.py  fapc_tools_v11.py  fapc_tools_v12.py  fapc_tools_v13.py  fapc_tools_v15.py  fapc_tools_v16.py  fapc_tools_v17.py  fapc_tools_v18.py  fapc_tools_v19.py  fapc_tools_v2.py  fapc_tools_v21.py  (+39 more)
agents/core/: archeon_ceo.py  db_manager.py  fapc_tools.py
archon_repo/: .env.sample  Dockerfile  Dockerfile.vpn  __init__.py  docker-compose.yml  init-db.sh
archon_repo/agents/: __init__.py
archon_repo/agents/core/: ADD_TO_FAPC_TOOLS.py  __init__.py  api_gateway.py  archon_ceo.py  auth.py  fapc_tools.py
archon_repo/agents/crews/: __init__.py  ai_and_research_crew.py  business_crew.py  (+12 more)
archon_repo/scripts/: __init__.py  archon_daemon.py  enable_2fa.py  knowledge_primer.py
archon_repo/workers/: __init__.py
tests/: __init__.py  test_auth.py  test_core_tools.py  test_placeholder.py
(+20 files in other folders)
