# You MUST add these dependencies to your Cargo.toml file
# Open src-tauri/Cargo.toml and add these under [dependencies]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.0", features = ["http-all", "shell-open"] }
reqwest = { version = "0.11", features = ["json", "blocking", "socks"] }
tokio = { version = "1", features = ["full"] }